// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownRender node e2e coverage > renders admonition node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="admonition">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-c8910e11="" data-v-8dfe8a80="" class="admonition admonition-stable">
          <div data-v-c8910e11="" id="admonition-stable" class="admonition-stable"><span data-v-c8910e11="" class="admonition-stable">⚠️</span><span data-v-c8910e11="" class="admonition-stable">Warning</span><!-- 可选的折叠控制（放在 header 末端） -->
            <!--v-if-->
          </div>
          <div data-v-c8910e11="" id="admonition-stable-content" class="admonition-stable" aria-labelledby="admonition-stable">
            <div data-v-8dfe8a80="" data-v-c8910e11="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Admonition content</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders blockquote node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="blockquote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <blockquote data-v-8ae59609="" data-v-8dfe8a80="" class="blockquote" dir="auto" is-dark="false">
          <div data-v-8dfe8a80="" data-v-8ae59609="" class="markstream-vue markdown-renderer">
            <!--v-if-->
            <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
              <div data-v-8dfe8a80="" class="node-content">
                <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                  <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Blockquote rendered content.</span></p>
                </transition-stub>
              </div>
            </div>
            <!--v-if-->
          </div>
        </blockquote>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders checkbox nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-disc" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" index-key="list-item-markdown-renderer-0-0-0-0"><input data-v-31e4c290="" type="checkbox" checked="" disabled="" class="checkbox-input"></span>
                      <!----><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> Completed task</span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" index-key="list-item-markdown-renderer-0-1-0-0"><input data-v-31e4c290="" type="checkbox" disabled="" class="checkbox-input"></span>
                      <!----><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> Pending task</span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders code block node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="code_block">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals --><pre data-v-8dfe8a80="" class="language-ts" aria-busy="false" aria-label="Code block: ts" data-language="ts" tabindex="0" loading="false" index-key="markdown-renderer-0" stream="true" is-dark="false"><code translate="no">export const sum = (a: number, b: number) =&gt; a + b
</code></pre>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders complex inline code with emphasis and multiple code spans 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-decimal" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto" value="1">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><strong data-v-b1e65240="" data-v-93ee5c2d="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-0-0">整合冗余条款：</span></strong><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> 将原</span><code data-v-93ee5c2d="" class="inline text-[85%] px-1 py-0.5 rounded font-mono bg-secondary whitespace-normal break-words max-w-full before:content-[''] after:content-['']" index-key="list-item-markdown-renderer-0-0-0-2">1-(5)</code><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">、</span><code data-v-93ee5c2d="" class="inline text-[85%] px-1 py-0.5 rounded font-mono bg-secondary whitespace-normal break-words max-w-full before:content-[''] after:content-['']" index-key="list-item-markdown-renderer-0-0-0-4">3-(3)</code><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">、</span><code data-v-93ee5c2d="" class="inline text-[85%] px-1 py-0.5 rounded font-mono bg-secondary whitespace-normal break-words max-w-full before:content-[''] after:content-['']" index-key="list-item-markdown-renderer-0-0-0-6">3-(4)</code><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">中关于“缴纳费用”和“告知法律状态变化”的核心义务合并，统一放入</span><code data-v-93ee5c2d="" class="inline text-[85%] px-1 py-0.5 rounded font-mono bg-secondary whitespace-normal break-words max-w-full before:content-[''] after:content-['']" index-key="list-item-markdown-renderer-0-0-0-8">1-(4)</code><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">“法律状态维护与通知义务”中，使其逻辑更集中，避免了在不同部分重复提及相似义务。</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders definition list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="definition_list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <dl data-v-084c0831="" data-v-8dfe8a80="" class="definition-list" is-dark="false">
          <dt data-v-084c0831="" class="definition-term">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="definition-term-markdown-renderer-0-0-0" typewriter="true" is-dark="false">Term</span></transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </dt>
          <dd data-v-084c0831="" class="definition-desc">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Definition details</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </dd>
        </dl>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emoji node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Smile with </span><span data-v-b001e831="" data-v-93ee5c2d="" class="emoji-node" index-key="markdown-renderer-0-1">😄</span><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> emoji.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emphasis node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">This is </span><em data-v-ca49685e="" data-v-93ee5c2d="" class="emphasis-node"><span data-v-a84b8095="" data-v-ca49685e="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">italic text</span></em><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">A footnote reference</span><sup data-v-ba0412bc="" data-v-93ee5c2d="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0-1"><span data-v-ba0412bc="" href="#footnote-1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">.</span></p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="footnote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-8dfe8a80="" id="fnref--1" class="flex mt-2 mb-2 text-sm leading-relaxed border-t border-[#eaecef] pt-2" is-dark="false">
          <!-- <span class="font-semibold mr-2 text-[#0366d6]">[{{ node.id }}]</span> -->
          <div class="flex-1">
            <div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Footnote explanation</span><a data-v-31914872="" data-v-93ee5c2d="" class="footnote-anchor text-sm text-[#0366d6] hover:underline cursor-pointer" href="#fnref-1" title="返回引用 1" index-key="footnote-markdown-renderer-1-0-1"> ↩︎ </a></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="footnote_reference">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><sup data-v-ba0412bc="" data-v-8dfe8a80="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0" typewriter="true" is-dark="false"><span data-v-ba0412bc="" href="#footnote-1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup></transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders hardbreak node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Line one</span><br data-v-2587360c="" data-v-93ee5c2d="" class="hard-break" index-key="markdown-renderer-0-1"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Line two</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders heading node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="heading">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <h1 data-v-9f883140="" data-v-8dfe8a80="" class="heading-node heading-1" dir="auto" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-9f883140="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0">Heading Node Title</span></h1>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders highlight node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Use </span><mark data-v-9bc40b1b="" data-v-93ee5c2d="" class="highlight-node"><span data-v-a84b8095="" data-v-9bc40b1b="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">highlighted text</span></mark><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> for emphasis.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders image node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false">
        <figure data-v-4ff2ac62="" data-v-93ee5c2d="" class="text-center my-8" index-key="markdown-renderer-0-0">
          <div data-v-4ff2ac62="" class="relative inline-block">
            <!-- 包裹条件渲染元素，启用 out-in 模式以在替换时做平滑过渡 -->
            <transition-stub data-v-4ff2ac62="" name="img-switch" mode="out-in" appear="false" persisted="false" css="true"><img data-v-4ff2ac62="" src="https://example.com/vue.png" alt="Vue Logo" title="Vue Logo" class="max-w-96 h-auto rounded-lg transition-opacity duration-200 ease-in-out opacity-0" loading="lazy" decoding="async" tabindex="-1" aria-label="Vue Logo"></transition-stub>
          </div>
          <!--v-if-->
        </figure>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders inline code node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Here is </span><code data-v-93ee5c2d="" class="inline text-[85%] px-1 py-0.5 rounded font-mono bg-secondary whitespace-normal break-words max-w-full before:content-[''] after:content-['']" index-key="markdown-renderer-0-1">const answer = 42</code><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> inline.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders insert node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Here comes </span><ins data-v-1e673445="" data-v-93ee5c2d="" class="insert-node"><span data-v-a84b8095="" data-v-1e673445="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">inserted text</span></ins><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> in the paragraph.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders link node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Visit </span><a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="https://vuejs.org" title="" aria-label="Link: " aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--link-color: #0366d6; --underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.9; --underline-duration: 0.8s; --underline-timing: linear; --underline-iteration: infinite;"><span data-v-a84b8095="" data-v-994bfd08="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">Vue</span></a><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> now.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders math inline node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Einstein wrote </span><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1">$E=mc^2$</span><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders ordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-decimal" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto" value="1">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">First entry</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto" value="2">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Second entry</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders paragraph and text node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Simple paragraph content rendered as plain text.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Cite research </span><span data-v-93ee5c2d="" class="reference-node cursor-pointer bg-accent text-xs rounded-md px-1.5 mx-0.5 hover:bg-secondary" role="button" tabindex="0" index-key="markdown-renderer-0-1">1</span><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> for details.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strikethrough node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">This is </span><del data-v-d7c2e36d="" data-v-93ee5c2d="" class="strikethrough-node"><span data-v-a84b8095="" data-v-d7c2e36d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">deleted text</span></del><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strong node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">This is </span><strong data-v-b1e65240="" data-v-93ee5c2d="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">bold text</span></strong><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders subscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Chemical formula H</span><sub data-v-40ad1ac6="" data-v-93ee5c2d="" class="subscript-node"><span data-v-a84b8095="" data-v-40ad1ac6="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">2</span></sub><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">O is familiar.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders superscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Math uses x</span><sup data-v-9c4a3c09="" data-v-93ee5c2d="" class="superscript-node"><span data-v-a84b8095="" data-v-9c4a3c09="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0">2</span></sup><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node"> frequently.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders table node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="table">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-8fb37ab3="" data-v-8dfe8a80="" class="table-node-wrapper" loading="false">
          <table data-v-8fb37ab3="" class="w-full my-8 text-sm table-fixed table-node" aria-busy="false">
            <colgroup data-v-8fb37ab3="">
              <col data-v-8fb37ab3="" style="width: 50%;">
              <col data-v-8fb37ab3="" style="width: 50%;">
            </colgroup>
            <thead data-v-8fb37ab3="" class="border-[var(--table-border,#cbd5e1)]">
              <tr data-v-8fb37ab3="" class="border-b">
                <th data-v-8fb37ab3="" dir="auto" class="font-semibold p-[calc(4/7*1em)] overflow-x-auto text-left">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-th-markdown-renderer-0-0" typewriter="true" is-dark="false">Name</span></transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </th>
                <th data-v-8fb37ab3="" dir="auto" class="font-semibold p-[calc(4/7*1em)] overflow-x-auto text-left">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-th-markdown-renderer-0-0" typewriter="true" is-dark="false">Role</span></transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </th>
              </tr>
            </thead>
            <tbody data-v-8fb37ab3="">
              <tr data-v-8fb37ab3="" class="border-[var(--table-border,#cbd5e1)]">
                <td data-v-8fb37ab3="" class="p-[calc(4/7*1em)] overflow-x-auto text-left" dir="auto">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-td-markdown-renderer-0-0" typewriter="true" is-dark="false">Alice</span></transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </td>
                <td data-v-8fb37ab3="" class="p-[calc(4/7*1em)] overflow-x-auto text-left" dir="auto">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-td-markdown-renderer-0-0" typewriter="true" is-dark="false">Developer</span></transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <transition-stub data-v-8fb37ab3="" name="table-node-fade" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders thematic break node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">First section.</span></p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="thematic_break">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <hr data-v-18e4f209="" data-v-8dfe8a80="" class="hr-node" node="[object Object]" index-key="markdown-renderer-1" typewriter="true" is-dark="false">
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="2" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Second section.</span></p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders unordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-disc" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Item one</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item pl-1.5 my-2" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node">Item two</span></p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
